syntax = "proto3";

package documents.v1;

// DocumentService provides operations for managing documents.
service DocumentService {
  // UpdateDocument updates an existing document's content.
  rpc UpdateDocument(UpdateDocumentRequest) returns (UpdateDocumentResponse);
  // DeleteDocument removes a document from a namespace.
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);
  // AddTagToDocument associates a tag with a document.
  rpc AddTagToDocument(AddTagToDocumentRequest) returns (AddTagToDocumentResponse);
  // RemoveTagFromDocument removes a tag association from a document.
  rpc RemoveTagFromDocument(RemoveTagFromDocumentRequest) returns (RemoveTagFromDocumentResponse);
}

// UpdateDocumentRequest contains the data needed to update a document.
message UpdateDocumentRequest {
  // document_id is the unique identifier of the document to update.
  string document_id = 1;
  // content is the new content for the document.
  string content = 2;
}

// UpdateDocumentResponse contains the updated document information.
message UpdateDocumentResponse {
  // document_id is the unique identifier of the document.
  string document_id = 1;
  // content is the document's content.
  string content = 2;
  // title is the document's title.
  string title = 3;
}

// DeleteDocumentRequest contains the information needed to delete a document.
message DeleteDocumentRequest {
  // namespace is the name of the namespace containing the document.
  string namespace = 1;
  // document_id is the unique identifier of the document to delete.
  string document_id = 2;
}

// DeleteDocumentResponse is returned when a document is successfully deleted.
message DeleteDocumentResponse {}

// AddTagToDocumentRequest contains the information needed to add a tag to a document.
message AddTagToDocumentRequest {
  // namespace is the name of the namespace containing the document and tag.
  string namespace = 1;
  // document_id is the unique identifier of the document.
  string document_id = 2;
  // tag_path is the full path of the tag to associate (e.g., "backend/api").
  string tag_path = 3;
  // attributes is an optional JSON object containing tag-specific attributes.
  // Must conform to the tag's attribute schema if one exists.
  optional string attributes = 4;
}

// AddTagToDocumentResponse is returned when a tag is successfully added to a document.
message AddTagToDocumentResponse {}

// RemoveTagFromDocumentRequest contains the information needed to remove a tag from a document.
message RemoveTagFromDocumentRequest {
  // namespace is the name of the namespace containing the document.
  string namespace = 1;
  // document_id is the unique identifier of the document.
  string document_id = 2;
  // tag_path is the full path of the tag to remove (e.g., "backend/api").
  string tag_path = 3;
}

// RemoveTagFromDocumentResponse is returned when a tag is successfully removed from a document.
message RemoveTagFromDocumentResponse {}
